--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'/>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
-  <title>Document</title>
-  <script src='js/index.js'></script>
-  <link rel='stylesheet' href='index.css'/>
+  <meta charset="UTF-8">
+  <title>Flatdango Movie Theater</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div id='main'>
+  <div id="main-content">
+    <h1>Flatdango Movie Theater</h1>
 
-    <h2>GitHub Search</h2>
+    <div class="container">
+      <div id="movie-menu">
+        <h2>Movie Menu</h2>
+        <ul id="films"></ul>
+      </div>
 
-    <form id='github-form'>
-      <input id='search' type='text' name='search'>
-      <input type='submit' name='submit'/>
-    </form>
-
-    <div id='github-container'>
-      <ul id='user-list'>
-
-      </ul>
-
-      <ul id='repos-list'>
-
-      </ul>
+      <div id="movie-details">
+        <h2>Movie Details</h2>
+        <div id="movie-info">
+          <img id="movie-poster" src="" alt="Movie Poster">
+          <h3 id="movie-title"></h3>
+          <p id="movie-runtime"></p>
+          <p id="movie-showtime"></p>
+          <p id="movie-available-tickets"></p>
+          <button id="buy-ticket-btn">Buy Ticket</button>
+        </div>
+      </div>
     </div>
 
+    <script src="./js/index.js"></script>
   </div>
-
 </body>
 </html>
